# data-pipeline

./: .env.example  .gitignore  Cargo.toml  README.md  count_products.rs  docker-compose.yml  naheed_store.rs  test_fallback_integration.rs
src/: lib.rs  main.rs
src/config/: api_config.rs  html_config.rs  minio_config.rs  mod.rs
src/configs/: bazaar_app.toml  dealcart.toml  krave_mart.toml  minio.toml  minio.toml.example  naheed.toml  pandamart.toml
src/fetcher/: html_fetcher.rs  http_fetcher.rs  mod.rs  unified_fetcher.rs
src/models/: data_models.rs  mod.rs
src/processor/: field_classifier.rs  html_processor.rs  json_flattener.rs  mod.rs  rule_normalizer.rs
src/storage/: minio_client.rs  mod.rs  storage_manager.rs
