[package]
name = "data-pipeline"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
wreq = "5"
wreq-util = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
minio = "0.3.0"
polars = { version = "0.51.0", features = ["json", "parquet", "lazy"] }
linfa = "0.7"
linfa-linear = "0.7"
linfa-preprocessing = "0.7"
linfa-clustering = "0.7"
ndarray = "0.16.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
config = "0.15.16"
async-trait = "0.1"
futures = "0.3"